fix(portal): align logo and header and extend blue bg on nav

--- a/apps/portal/src/app/sass/components/pins-header.scss
+++ b/apps/portal/src/app/sass/components/pins-header.scss
@@ -9,8 +9,6 @@
 	font-family: govuk.$govuk-font-family;
 
 	&__container {
-		display: flex;
-		flex-wrap: wrap;
 		border-bottom: 0;
 		padding: 0;
 		margin-bottom: 0;
